--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/webpack --config webpack"
+    "start": "node_modules/.bin/webpack --config webpack",
+    "build": "webpack"
   },
   "_comments": {
     "start": "local installation of webpack",
