--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "license": "MIT",
   "devDependencies": {
     "eslint": "^5.6.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "css-loader": "^1.0.0",
     "lodash": "^4.17.11"
   }
 }
