--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node_modules/.bin/webpack --config webpack",
-    "build": "webpack"
+    "watch": "webpack --watch",
+    "webpack-dev-server": "webpack-dev-server  --open",
+    "build": "webpack",
+    "server": "node server.js"
   },
   "_comments": {
     "start": "local installation of webpack",
@@ -23,11 +26,14 @@
     "clean-webpack-plugin": "^0.1.19",
     "csv-loader": "^3.0.2",
     "eslint": "^5.6.1",
+    "express": "^4.16.3",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
+    "webpack-dev-server": "^3.1.9",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
